test: 사용자 Service Layer 단위 테스트